--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 
 main {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -17,30 +18,55 @@ main {
     /* opacity:; */
 }
 
+.slayer {
+    background-color: rgba(55,55,55,0.5);
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 .convertidor-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 50%;
+}
+
+.convertidor-container div{
+    margin: 50px;
+}
+
+.card:hover{
+    flex-grow: 1;
 }
 
 .card {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
     width:20vw;
-    height: 60%;
+    height: 35%;
     box-shadow: 5px 5px 5px rgba(255, 255, 255, 0.8);
     border-radius: 30px;
     background: white;
 }
 
-.card h1 {
+h1 {
     display: flex;
     flex-wrap: wrap;
     text-align: center;
+    color: white;
+    margin-top: 100px;
+    justify-content: center;
+    font-size: 50px;
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
 
 .card-conversiones {
@@ -50,7 +76,7 @@ main {
     align-items: center;
 }
 
-.card-conversiones div{
+.contenedor-botones{
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -58,11 +84,12 @@ main {
     padding: 10px;
 }
 
-.card-conversiones p{
+.contenedor-botones p{
     margin-top: 30px;
     color: red;
     font-weight: bold;
     font-size: 20px;
+    text-align: center;
 }
 
 .card-conversiones input{
